# waitzar

./: Eighth_Vote.doc  Fifth_Vote.doc  Fourth_Vote.doc  IDEABurglishCustomEngine.md  IDEACovnertAyar.md  IDEAKeyMagicDataStructs.md  IDEAKeyMagicFormalization.md  IDEAKeyMagicImprovements.md  IDEAModelFormatUpdate.md  IDEATypingNormalization.md  Introduction.md  KeyMagic Standard Draft.odt  Keyboard Layout Diagrams - Ayar.odt  Keyboard Layout Diagrams - Myanmar3.odt  Keyboard Layout Diagrams - Yunghkio.odt  Keyboard Layout Diagrams.odt  LICENSE  Ligatures.xls  Multi-Language Models.xls  NOTICE  Onsets.md  ProjectHome.md  Romanisation 2.0 Override Review.doc  Seventh_Vote.doc  Sixth_Vote.doc  THANKS  Testing Plan.doc  Third_Vote.doc  WZ_Design_Philosophy.txt  Wait Zar Romanisation v2 alpha 1.0.xls  Wait Zar Romanisation v2 alpha 1.1.xls  Wait Zar Romanisation v2.0_final.xls  Wait Zar Romanisation v2.xls  WaitZar Hacker's Guide (Source).odt  WaitZar Official Compatibiity Checklist.ods  WaitZar Official Compatibiity Checklist.xls  WaitZar Testing Plan.odt  WaitZar User's Guide (Myanmar) (Source).odt  WaitZar User's Guide (Source).odt  WaitZar User's Guide, Bilinguial (Source).odt  (+14 more)
Config WZ/: Config WZ.vcproj  ConfigManager.cpp  ConfigManager.h  Interfaces.h
ExternalModelTester/: ExternalModelTester-vs2003.vcproj  ExternalModelTester.cpp  ExternalModelTester.vcproj  ExternalModelTester.vcxproj  ExternalModelTester.vcxproj.filters  Wait Zar Model API.html  external_output.txt
FontConvertTester/: Runner.cpp  String Conversion Check.xls
cross_platform_library/: AUTHORS  ExternalModelTester.cpp  Makefile.am  README  SConstruct  Wait_Zar_Model_API.html  configure.ac  png_crc.c  waitzar-1.0.0.pc.in  waitzar.pc.in
cross_platform_library/data/: mywords.txt
cross_platform_library/libwaitzar-1.0.0/: Makefile.in  configure  waitzar.pc.in
cross_platform_library/libwaitzar-1.0.0/data/: Makefile.in
cross_platform_library/libwaitzar-1.0.0/debian/: changelog  control  copyright  docs  libwaitzar-dev.install  libwaitzar1-dev.install  libwaitzar1.install  libwaitzar1.symbols  rules  watch
cross_platform_library/libwaitzar-1.0.0/waitzar/: Makefile.in  fontconv.h  lib.cpp
cross_platform_library/src/: Makefile.am
cross_platform_library/waitzar/: Makefile.am  PythonSpecs.cpp  SentenceList.cpp  SentenceList.h  WordBuilder.cpp  WordBuilder.h  fontconv.cpp  fontconv.h  fontmap.cpp  fontmap.h  lib.cpp  regex.cpp  regex.h  wz.ver  wz_utilities.cpp  wz_utilities.h
cross_platform_library/waitzar-1.0.0/: configure  configure.ac
cross_platform_library/waitzar-1.0.0/debian/: copyright
cross_platform_library/waitzar-1.0.0/waitzar/: lib.h  regex.h
cross_platform_library/waitzar/burglish/: fontconv.h  fontmap.h  lib.h
cross_platform_library/waitzar/ngram/: BurglishBuilder.cpp  BurglishBuilder.h  Logger.cpp  Logger.h  SentenceList.h  WordBuilder.cpp  WordBuilder.h  wz_utilities.cpp  wz_utilities.h
eclipse_project/: .classpath  .project  MyanmarList_v1.txt  MyanmarList_v2.txt  onsets.zg.txt  rhymelist.generated.txt  rhymelist.top90.txt  rhymes.txt  rhymes.zg.txt  specials.zg.txt  wordlist.generated.txt  words.zg.txt
keymagic_refimpl/: keymagic.peg  keymagic_pre.peg  test_peg.js  test_peg_parser.html
nightly/: shn_syllables.txt  (+1 more)
trunk/cross_platform_library/: ChangeLog  ExternalModelTester.cpp  Makefile.am  Makefile.am~  SConstruct  Wait_Zar_Model_API.html  compile_tests.sh  configure.ac  png_crc.c  waitzar.pc.in
trunk/cross_platform_library/data/: Makefile.am  Myanmar.model
trunk/cross_platform_library/libwaitzar-1.0.0/: ExternalModelTester.cpp  Makefile.am  Makefile.in  NEWS  README  Wait_Zar_Model_API.html  configure  configure.ac
trunk/cross_platform_library/libwaitzar-1.0.0/data/: Makefile.am  mywords.txt
trunk/cross_platform_library/libwaitzar-1.0.0/debian/: changelog  control  copyright  libwaitzar1-dev.install  libwaitzar1.install  libwaitzar1.symbols  rules
trunk/cross_platform_library/libwaitzar-1.0.0/waitzar/: Makefile.am  Makefile.in  WordBuilder.cpp  fontconv.cpp  fontmap.h  lib.cpp  wz.ver
trunk/cross_platform_library/src/: Makefile.am  WordBuilder.h  fontmap.cpp  regex.cpp
trunk/cross_platform_library/waitzar/: ExternalModelTester.cpp  Makefile.am  PythonSpecs.cpp  SentenceList.cpp  SentenceList.h  WordBuilder.cpp  WordBuilder.h  fontconv.cpp  fontconv.h  fontmap.cpp  lib.cpp  lib.h  regex.cpp  regex.h  wz_utilities.cpp  wz_utilities.h
trunk/cross_platform_library/waitzar-1.0.0/: Makefile.in
trunk/cross_platform_library/waitzar-1.0.0/data/: Makefile.in
trunk/cross_platform_library/waitzar-1.0.0/debian/: README  control  dirs  docs  rules
trunk/cross_platform_library/waitzar-1.0.0/waitzar/: Makefile.am  fontmap.cpp  fontmap.h
trunk/cross_platform_library/waitzar/burglish/: README-OLD-FILES.txt  fontconv.cpp  fontconv.h  fontmap.cpp  lib.cpp  lib.h  regex.cpp
trunk/cross_platform_library/waitzar/ngram/: BurglishBuilder.cpp  BurglishBuilder.h  Logger.cpp  Logger.h  SentenceList.cpp  WordBuilder.cpp  WordBuilder.h  wz_utilities.cpp  wz_utilities.h
(+607 files in other folders)
