lib_LTLIBRARIES = libwaitzar.la
include_HEADERS = WordBuilder.h

noinst_HEADERS = \
	regex.h \
	lib.h \
	fontmap.h \
	fontconv.h

libwaitzar_la_SOURCES = \
	WordBuilder.cpp \
	WordBuilder.h \
	SentenceList.cpp \
	SentenceList.h \
	regex.cpp \
	lib.cpp \
	fontmap.cpp \
	fontconv.cpp \
	ExternalModelTester.cpp

libwaitzar_la_doc_DATA = ../Wait_Zar_Model API.html



