## top directory

#Build in these directories:
SUBDIRS= $(GENERIC_LIBRARY_NAME)

#Distribute these directories:
DIST_SUBDIRS = $(GENERIC_LIBRARY_NAME)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = waitzar-1.0.0.pc

EXTRA_DIST = \
             autogen.sh \
             Wait_Zar_Model API.html

