## top directory

#Build in these directories:
SUBDIRS= $(GENERIC_LIBRARY_NAME) data

#Distribute these directories:
DIST_SUBDIRS = $(GENERIC_LIBRARY_NAME)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = waitzar-1.0.pc

EXTRA_DIST = \
             autogen.sh \
             compile_tests.sh \
             ExternalModelTester.cpp \
             Wait_Zar_Model API.html

