#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(libwaitzar, 1.0.0, sorlok_reaves@yahoo.com)
AC_CONFIG_SRCDIR([src/WordBuilder.h])
AC_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL
      
AC_CONFIG_FILES([Makefile 
                 src/Makefile])
AC_OUTPUT

