## top directory

#Build in these directories:
SUBDIRS= $(GENERIC_LIBRARY_NAME) data

#Distribute these directories:
DIST_SUBDIRS = $(GENERIC_LIBRARY_NAME) data

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = waitzar-1.0.pc

EXTRA_DIST = \
             compile_tests.sh \
             ExternalModelTester.cpp \
             Wait_Zar_Model_API.html

